added webpack-dev-server, source map and  Hot Module Replacement

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Webpack configuration</title>
+    <title>Webpack from Module E13</title>
     <link rel="stylesheet" type="text/css" href="dist/main.css">
 </head>
 <body>
